# qpp-console-lang-converter

./: .gitignore  CMakeLists.txt  README.md
src/: appwindow.cpp  appwindow.hpp  convert.cpp  convert.hpp  main.cpp
